--- a/HoCa_CSS.html
+++ b/HoCa_CSS.html
@@ -114,7 +114,8 @@
 </head>
 <body>
 
-<div id="https://img.pikbest.com/09/14/13/06kpIkbEsTYSv.jpg!w700wp"></div>
+<div style="background-image:url(https://i.pinimg.com/736x/6f/e6/c2/6fe6c2983f5c5ed32a3948be50d6a26c.jpg); background-size: cover; width: 100%; height: 100%;  background-position: center;
+background-repeat: no-repeat;">
 
     <div id="shark"><img src="https://art.ngfiles.com/comments/245000/iu_245073_5714699.gif"; width="298" height="149"></div>
 	<div id="nemo"><img src="https://media.baamboozle.com/uploads/images/73330/1668605781_17770_gif-url.gif"; width="298" height="149"></div>
